kubernetes/20-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: ip-reputation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: ntvs28/ip-reputation-checker-auth-service:v3-20250927203821
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ip-reputation
spec:
  selector:
    app: auth-service
  ports:
  - port: 8001
    targetPort: 8001
