kubernetes/30-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: ip-reputation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: api-service
        image: ntvs28/ip-reputation-checker-api-service:v-api-20250927174753
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ip-reputation
spec:
  selector:
    app: api-service
  ports:
  - port: 8000
    targetPort: 8000
