kubernetes/50-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web
  namespace: ip-reputation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-web
  template:
    metadata:
      labels:
        app: frontend-web
    spec:
      containers:
      - name: frontend
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        - name: static-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-security-config
      - name: static-content
        configMap:
          name: frontend-static-content
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-web
  namespace: ip-reputation
spec:
  type: NodePort
  selector:
    app: frontend-web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
